Merges entity.boss, entity.effect, and entity.item to 1.8.