@@ -10,49 +10,62 @@ import net.canarymod.config.Configuration;
 import net.canarymod.hook.entity.*;
 import net.minecraft.block.Block;
 import net.minecraft.block.BlockRailBase;
-import net.minecraft.block.material.Material;
+import net.minecraft.block.BlockRailPowered;
+import net.minecraft.block.state.IBlockState;
 import net.minecraft.entity.Entity;
 import net.minecraft.entity.EntityLivingBase;
 import net.minecraft.entity.EntityMinecartCommandBlock;
 import net.minecraft.entity.ai.EntityMinecartMobSpawner;
+import net.minecraft.entity.item.EntityMinecartChest;
+import net.minecraft.entity.item.EntityMinecartEmpty;
+import net.minecraft.entity.item.EntityMinecartFurnace;
+import net.minecraft.entity.item.EntityMinecartHopper;
+import net.minecraft.entity.item.EntityMinecartTNT;
 import net.minecraft.entity.monster.EntityIronGolem;
 import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.init.Blocks;
 import net.minecraft.init.Items;
 import net.minecraft.item.ItemStack;
 import net.minecraft.nbt.NBTTagCompound;
+import net.minecraft.server.MinecraftServer;
 import net.minecraft.util.AxisAlignedBB;
+import net.minecraft.util.BlockPos;
+import net.minecraft.util.ChatComponentText;
+import net.minecraft.util.ChatComponentTranslation;
 import net.minecraft.util.DamageSource;
+import net.minecraft.util.IChatComponent;
 import net.minecraft.util.MathHelper;
+import net.minecraft.util.ResourceLocation;
 import net.minecraft.util.Vec3;
+import net.minecraft.world.IWorldNameable;
 import net.minecraft.world.World;
 import net.minecraft.world.WorldServer;
 
 import java.util.List;
+import com.google.common.collect.Maps;
+import java.util.Iterator;
+import java.util.Map;
 
-//import net.minecraft.server.MinecraftServer;
+public abstract class EntityMinecart extends Entity implements IWorldNameable {
 
-public abstract class EntityMinecart extends Entity {
-
-    public boolean a; // CanaryMod: private -> public
+    private boolean a;
     private String b;
-    private static final int[][][] c = new int[][][]{{{0, 0, -1}, {0, 0, 1}}, {{-1, 0, 0}, {1, 0, 0}}, {{-1, -1, 0}, {1, 0, 0}}, {{-1, 0, 0}, {1, -1, 0}}, {{0, 0, -1}, {0, -1, 1}}, {{0, -1, -1}, {0, 0, 1}}, {{0, 0, 1}, {1, 0, 0}}, {{0, 0, 1}, {-1, 0, 0}}, {{0, 0, -1}, {-1, 0, 0}}, {{0, 0, -1}, {1, 0, 0}}};
+    private static final int[][][] c = new int[][][] { { { 0, 0, -1}, { 0, 0, 1}}, { { -1, 0, 0}, { 1, 0, 0}}, { { -1, -1, 0}, { 1, 0, 0}}, { { -1, 0, 0}, { 1, -1, 0}}, { { 0, 0, -1}, { 0, -1, 1}}, { { 0, -1, -1}, { 0, 0, 1}}, { { 0, 0, 1}, { 1, 0, 0}}, { { 0, 0, 1}, { -1, 0, 0}}, { { 0, 0, -1}, { -1, 0, 0}}, { { 0, 0, -1}, { 1, 0, 0}}};
     private int d;
     private double e;
     private double f;
     private double g;
     private double h;
     private double i;
-
+   
     public EntityMinecart(World world) {
         super(world);
         this.k = true;
         this.a(0.98F, 0.7F);
-        this.L = this.N / 2.0F;
     }
 
-    public static EntityMinecart a(World world, double d0, double d1, double d2, int i0) {
-        switch (i0) {
+    public static EntityMinecart a(World world, double d0, double d1, double d2, EntityMinecart.EnumMinecartType entityminecart_enumminecarttype) {
+        switch (EntityMinecart.SwitchEnumMinecartType.a[entityminecart_enumminecarttype.ordinal()]) {
             case 1:
                 return new EntityMinecartChest(world, d0, d1, d2);
 
@@ -67,6 +80,7 @@ public abstract class EntityMinecart extends Entity {
 
             case 5:
                 return new EntityMinecartHopper(world, d0, d1, d2);
+
             case 6:
                 return new EntityMinecartCommandBlock(world, d0, d1, d2);
 
@@ -75,28 +89,28 @@ public abstract class EntityMinecart extends Entity {
         }
     }
 
-    protected boolean g_() {
+    protected boolean r_() {
         return false;
     }
 
-    protected void c() {
-        this.af.a(17, new Integer(0));
-        this.af.a(18, new Integer(1));
-        this.af.a(19, new Float(0.0F));
-        this.af.a(20, new Integer(0));
-        this.af.a(21, new Integer(6));
-        this.af.a(22, Byte.valueOf((byte) 0));
+    protected void h() {
+        this.ac.a(17, new Integer(0));
+        this.ac.a(18, new Integer(1));
+        this.ac.a(19, new Float(0.0F));
+        this.ac.a(20, new Integer(0));
+        this.ac.a(21, new Integer(6));
+        this.ac.a(22, Byte.valueOf((byte) 0));
     }
 
-    public AxisAlignedBB h(Entity entity) {
-        return entity.S() ? entity.C : null;
+    public AxisAlignedBB j(Entity entity) {
+        return entity.ae() ? entity.aQ() : null;
     }
 
-    public AxisAlignedBB J() {
+    public AxisAlignedBB S() {
         return null;
     }
 
-    public boolean S() {
+    public boolean ae() {
         return true;
     }
 
@@ -111,13 +125,13 @@ public abstract class EntityMinecart extends Entity {
         this.r = d2;
     }
 
-    public double ae() {
-        return (double) this.N * 0.0D - 0.30000001192092896D;
+    public double an() {
+        return (double) this.K * 0.5D - 0.20000000298023224D;
     }
 
     public boolean a(DamageSource damagesource, float f0) {
-        if (!this.o.E && !this.K) {
-            if (this.aw()) {
+        if (!this.o.D && !this.I) {
+            if (this.b(damagesource)) {
                 return false;
             } else {
                 // CanaryMod: VehicleDamage
@@ -133,19 +147,19 @@ public abstract class EntityMinecart extends Entity {
                 f0 = hook.getDamageDealt();
                 //
 
-                this.j(-this.l());
-                this.c(10);
-                this.Q();
-                this.a(this.j() + f0 * 10.0F);
-                boolean flag0 = damagesource.j() instanceof EntityPlayer && ((EntityPlayer) damagesource.j()).bE.d;
+               this.k(-this.r());
+                this.j(10);
+                this.ac();
+                this.a(this.p() + f0 * 10.0F);
+                boolean flag0 = damagesource.j() instanceof EntityPlayer && ((EntityPlayer) damagesource.j()).by.d;
 
-                if (flag0 || this.j() > 40.0F) {
+                if (flag0 || this.p() > 40.0F) {
                     if (this.l != null) {
-                        this.l.a((Entity) this);
+                        this.l.a((Entity) null);
                     }
 
                     if (flag0 && !this.k_()) {
-                        this.B();
+                        this.J();
                     } else {
                         this.a(damagesource);
                     }
@@ -162,8 +176,8 @@ public abstract class EntityMinecart extends Entity {
         // CanaryMod: VehicleDestroy
         new VehicleDestroyHook((Vehicle) this.entity).call();
         //
-        this.B();
-        ItemStack itemstack = new ItemStack(Items.au, 1);
+        this.J();
+        ItemStack itemstack = new ItemStack(Items.az, 1);
 
         if (this.b != null) {
             itemstack.c(this.b);
@@ -172,71 +186,71 @@ public abstract class EntityMinecart extends Entity {
         this.a(itemstack, 0.0F);
     }
 
-    public boolean R() {
-        return !this.K;
+    public boolean ad() {
+        return !this.I;
     }
 
-    public void B() {
-        super.B();
+    public void J() {
+        super.J();
     }
 
-    public void h() {
-        if (this.k() > 0) {
-            this.c(this.k() - 1);
+    public void s_() {
+        if (this.q() > 0) {
+            this.j(this.q() - 1);
         }
 
-        if (this.j() > 0.0F) {
-            this.a(this.j() - 1.0F);
+        if (this.p() > 0.0F) {
+            this.a(this.p() - 1.0F);
         }
 
         if (this.t < -64.0D) {
-            this.G();
+            this.O();
         }
 
         int i0;
 
-        if (!this.o.E && this.o instanceof WorldServer) {
-            this.o.C.a("portal");
-            //MinecraftServer minecraftserver = ((WorldServer) this.p).p();
+        if (!this.o.D && this.o instanceof WorldServer) {
+            this.o.B.a("portal");
+            //MinecraftServer minecraftserver = ((WorldServer) this.o).r();
 
-            i0 = this.D();
-            if (this.an) {
+            i0 = this.L();
+            if (this.ak) {
                 // CanaryMod moved allow-nether to per-world config
                 if (Configuration.getWorldConfig(getCanaryWorld().getFqName()).isNetherAllowed()) {
-                    if (this.m == null && this.ao++ >= i0) {
-                        this.ao = i0;
-                        this.am = this.ai();
+                    if (this.m == null && this.al++ >= i0) {
+                        this.al = i0;
+                        this.aj = this.ar();
                         byte b0;
 
-                        if (this.o.t.i == -1) {
+                        if (this.o.t.q() == -1) {
                             b0 = 0;
                         } else {
                             b0 = -1;
                         }
 
-                        this.b(b0);
+                        this.c(b0);
                     }
 
-                    this.an = false;
+                    this.ak = false;
                 }
             } else {
-                if (this.ao > 0) {
-                    this.ao -= 4;
+                if (this.al > 0) {
+                    this.al -= 4;
                 }
 
-                if (this.ao < 0) {
-                    this.ao = 0;
+                if (this.al < 0) {
+                    this.al = 0;
                 }
             }
 
-            if (this.am > 0) {
-                --this.am;
+            if (this.aj > 0) {
+                --this.aj;
             }
 
-            this.o.C.b();
+            this.o.B.b();
         }
 
-        if (this.o.E) {
+        if (this.o.D) {
             if (this.d > 0) {
                 double d0 = this.s + (this.e - this.s) / (double) this.d;
                 double d1 = this.t + (this.f - this.t) / (double) this.d;
@@ -252,6 +266,7 @@ public abstract class EntityMinecart extends Entity {
                 this.b(this.s, this.t, this.u);
                 this.b(this.y, this.z);
             }
+
         } else {
             float prevRot = this.y, prevPit = this.z;
             double ppX = this.p, ppY = this.q, ppZ = this.r;
@@ -264,47 +279,43 @@ public abstract class EntityMinecart extends Entity {
             i0 = MathHelper.c(this.t);
             int i2 = MathHelper.c(this.u);
 
-            if (BlockRailBase.b_(this.o, i1, i0 - 1, i2)) {
+            if (BlockRailBase.d(this.o, new BlockPos(i1, i0 - 1, i2))) {
                 --i0;
             }
 
-            double d4 = 0.4D;
-            double d5 = 0.0078125D;
-            Block block = this.o.a(i1, i0, i2);
+            BlockPos blockpos = new BlockPos(i1, i0, i2);
+            IBlockState iblockstate = this.o.p(blockpos);
 
-            if (BlockRailBase.a(block)) {
-                int i3 = this.o.e(i1, i0, i2);
-
-                this.a(i1, i0, i2, d4, d5, block, i3);
-                if (block == Blocks.cc) {
+                this.a(blockpos, iblockstate);
+                if (iblockstate.c() == Blocks.cs) {
                     // CanaryMod: MinecartActivate
                     MinecartActivateHook mah = new MinecartActivateHook((Minecart) this.getCanaryEntity(), (i1 & 8) != 0);
 
                     Canary.hooks().callHook(mah);
                     if (!mah.isCanceled()) {
-                        this.a(i1, i0, i2, (i3 & 8) != 0);
+                        this.a(i1, i0, i2, ((Boolean) iblockstate.b(BlockRailPowered.M)).booleanValue());
                     }
                     //
                 }
             } else {
-                this.b(d4);
+                this.n();
             }
 
-            this.I();
+            this.Q();
             this.z = 0.0F;
-            double d6 = this.p - this.s;
-            double d7 = this.r - this.u;
+            double d4 = this.p - this.s;
+            double d5 = this.r - this.u;
 
-            if (d6 * d6 + d7 * d7 > 0.001D) {
-                this.y = (float) (Math.atan2(d7, d6) * 180.0D / 3.141592653589793D);
+            if (d4 * d4 + d5 * d5 > 0.001D) {
+                this.y = (float) (Math.atan2(d5, d4) * 180.0D / 3.141592653589793D);
                 if (this.a) {
                     this.y += 180.0F;
                 }
             }
 
-            double d8 = (double) MathHelper.g(this.y - this.A);
+            double d6 = (double) MathHelper.g(this.y - this.A);
 
-            if (d8 < -170.0D || d8 >= 170.0D) {
+            if (d6 < -170.0D || d6 >= 170.0D) {
                 this.y += 180.0F;
                 this.a = !this.a;
             }
@@ -325,23 +336,21 @@ public abstract class EntityMinecart extends Entity {
                     this.r = ppZ;
                     this.y = prevRot;
                     this.z = prevRot;
-                    this.ac(); // Update rider
+                    this.al(); // Update rider
                 }
             }
             //
-            List list = this.o.b((Entity) this, this.C.b(0.20000000298023224D, 0.0D, 0.20000000298023224D));
+            Iterator iterator = this.o.b((Entity) this, this.aQ().b(0.20000000298023224D, 0.0D, 0.20000000298023224D)).iterator();
 
-            if (list != null && !list.isEmpty()) {
-                for (int i4 = 0; i4 < list.size(); ++i4) {
-                    Entity entity = (Entity) list.get(i4);
+            while (iterator.hasNext()) {
+                Entity entity = (Entity) iterator.next();
 
-                    if (entity != this.l && entity.S() && entity instanceof EntityMinecart) {
-                        entity.g(this);
-                    }
+                if (entity != this.l && entity.ae() && entity instanceof EntityMinecart) {
+                    entity.i(this);
                 }
             }
 
-            if (this.l != null && this.l.K) {
+            if (this.l != null && this.l.I) {
                 if (this.l.m == this) {
                     this.l.m = null;
                 }
@@ -349,121 +358,115 @@ public abstract class EntityMinecart extends Entity {
                 this.l = null;
             }
 
+            this.W();
         }
     }
 
-    public void a(int i0, int i1, int i2, boolean flag0) {
+    protected double m() {
+        return 0.4D;
     }
 
-    protected void b(double d0) {
-        if (this.v < -d0) {
-            this.v = -d0;
-        }
+    public void a(int i0, int i1, int i2, boolean flag0) {}
 
-        if (this.v > d0) {
-            this.v = d0;
-        }
+    protected void n() {
+        double d0 = this.m();
 
-        if (this.x < -d0) {
-            this.x = -d0;
-        }
-
-        if (this.x > d0) {
-            this.x = d0;
-        }
-
-        if (this.D) {
+        this.v = MathHelper.a(this.v, -d0, d0);
+        this.x = MathHelper.a(this.x, -d0, d0);
+        if (this.C) {
             this.v *= 0.5D;
             this.w *= 0.5D;
             this.x *= 0.5D;
         }
 
         this.d(this.v, this.w, this.x);
-        if (!this.D) {
+        if (!this.C) {
             this.v *= 0.949999988079071D;
             this.w *= 0.949999988079071D;
             this.x *= 0.949999988079071D;
         }
+
     }
 
-    protected void a(int i0, int i1, int i2, double d0, double d1, Block block, int i3) {
-        this.R = 0.0F;
-        Vec3 vec3 = this.a(this.s, this.t, this.u);
+    protected void a(BlockPos blockpos, IBlockState iblockstate) {
+        this.O = 0.0F;
+        Vec3 vec3 = this.k(this.s, this.t, this.u);
 
-        this.t = (double) i1;
+        this.t = (double) blockpos.o();
         boolean flag0 = false;
         boolean flag1 = false;
+        BlockRailBase blockrailbase = (BlockRailBase) iblockstate.c();
 
-        if (block == Blocks.D) {
-            flag0 = (i3 & 8) != 0;
+        if (blockrailbase == Blocks.D) {
+            flag0 = ((Boolean) iblockstate.b(BlockRailPowered.M)).booleanValue();
             flag1 = !flag0;
         }
 
-        if (((BlockRailBase) block).e()) {
-            i3 &= 7;
+        double d0 = 0.0078125D;
+        BlockRailBase.EnumRailDirection blockrailbase_enumraildirection = (BlockRailBase.EnumRailDirection) iblockstate.b(blockrailbase.l());
+
+        switch (EntityMinecart.SwitchEnumMinecartType.b[blockrailbase_enumraildirection.ordinal()]) {
+            case 1:
+                this.v -= 0.0078125D;
+                ++this.t;
+                break;
+
+            case 2:
+                this.v += 0.0078125D;
+                ++this.t;
+                break;
+
+            case 3:
+                this.x += 0.0078125D;
+                ++this.t;
+                break;
+
+            case 4:
+                this.x -= 0.0078125D;
+                ++this.t;
         }
 
-        if (i3 >= 2 && i3 <= 5) {
-            this.t = (double) (i1 + 1);
-        }
+        int[][] aint = c[blockrailbase_enumraildirection.a()];
+        double d1 = (double) (aint[1][0] - aint[0][0]);
+        double d2 = (double) (aint[1][2] - aint[0][2]);
+        double d3 = Math.sqrt(d1 * d1 + d2 * d2);
+        double d4 = this.v * d1 + this.x * d2;
 
-        if (i3 == 2) {
-            this.v -= d1;
-        }
-
-        if (i3 == 3) {
-            this.v += d1;
-        }
-
-        if (i3 == 4) {
-            this.x += d1;
-        }
-
-        if (i3 == 5) {
-            this.x -= d1;
-        }
-
-        int[][] aint = c[i3];
-        double d2 = (double) (aint[1][0] - aint[0][0]);
-        double d3 = (double) (aint[1][2] - aint[0][2]);
-        double d4 = Math.sqrt(d2 * d2 + d3 * d3);
-        double d5 = this.v * d2 + this.x * d3;
-
-        if (d5 < 0.0D) {
+        if (d4 < 0.0D) {
+            d1 = -d1;
             d2 = -d2;
-            d3 = -d3;
         }
 
-        double d6 = Math.sqrt(this.v * this.v + this.x * this.x);
+        double d5 = Math.sqrt(this.v * this.v + this.x * this.x);
 
-        if (d6 > 2.0D) {
-            d6 = 2.0D;
+        if (d5 > 2.0D) {
+            d5 = 2.0D;
         }
 
-        this.v = d6 * d2 / d4;
-        this.x = d6 * d3 / d4;
+        this.v = d5 * d1 / d3;
+        this.x = d5 * d2 / d3;
+        double d6;
         double d7;
         double d8;
         double d9;
-        double d10;
 
-        if (this.l != null && this.l instanceof EntityLivingBase) {
-            d7 = (double) ((EntityLivingBase) this.l).be;
-            if (d7 > 0.0D) {
-                d8 = -Math.sin((double) (this.l.y * 3.1415927F / 180.0F));
-                d9 = Math.cos((double) (this.l.y * 3.1415927F / 180.0F));
-                d10 = this.v * this.v + this.x * this.x;
-                if (d10 < 0.01D) {
-                    this.v += d8 * 0.1D;
-                    this.x += d9 * 0.1D;
+        if (this.l instanceof EntityLivingBase) {
+            d6 = (double) ((EntityLivingBase) this.l).aY;
+            if (d6 > 0.0D) {
+                d7 = -Math.sin((double) (this.l.y * 3.1415927F / 180.0F));
+                d8 = Math.cos((double) (this.l.y * 3.1415927F / 180.0F));
+                d9 = this.v * this.v + this.x * this.x;
+                if (d9 < 0.01D) {
+                    this.v += d7 * 0.1D;
+                    this.x += d8 * 0.1D;
                     flag1 = false;
                 }
             }
         }
 
         if (flag1) {
-            d7 = Math.sqrt(this.v * this.v + this.x * this.x);
-            if (d7 < 0.03D) {
+            d6 = Math.sqrt(this.v * this.v + this.x * this.x);
+            if (d6 < 0.03D) {
                 this.v *= 0.0D;
                 this.w *= 0.0D;
                 this.x *= 0.0D;
@@ -474,84 +477,72 @@ public abstract class EntityMinecart extends Entity {
             }
         }
 
-        d7 = 0.0D;
-        d8 = (double) i0 + 0.5D + (double) aint[0][0] * 0.5D;
-        d9 = (double) i2 + 0.5D + (double) aint[0][2] * 0.5D;
-        d10 = (double) i0 + 0.5D + (double) aint[1][0] * 0.5D;
-        double d11 = (double) i2 + 0.5D + (double) aint[1][2] * 0.5D;
+        d6 = 0.0D;
+        d7 = (double) blockpos.n() + 0.5D + (double) aint[0][0] * 0.5D;
+        d8 = (double) blockpos.p() + 0.5D + (double) aint[0][2] * 0.5D;
+        d9 = (double) blockpos.n() + 0.5D + (double) aint[1][0] * 0.5D;
+        double d10 = (double) blockpos.p() + 0.5D + (double) aint[1][2] * 0.5D;
 
+        d1 = d9 - d7;
         d2 = d10 - d8;
-        d3 = d11 - d9;
+        double d11;
         double d12;
-        double d13;
 
-        if (d2 == 0.0D) {
-            this.s = (double) i0 + 0.5D;
-            d7 = this.u - (double) i2;
-        } else if (d3 == 0.0D) {
-            this.u = (double) i2 + 0.5D;
-            d7 = this.s - (double) i0;
+        if (d1 == 0.0D) {
+            this.s = (double) blockpos.n() + 0.5D;
+            d6 = this.u - (double) blockpos.p();
+        } else if (d2 == 0.0D) {
+            this.u = (double) blockpos.p() + 0.5D;
+            d6 = this.s - (double) blockpos.n();
         } else {
-            d12 = this.s - d8;
-            d13 = this.u - d9;
-            d7 = (d12 * d2 + d13 * d3) * 2.0D;
+            d11 = this.s - d7;
+            d12 = this.u - d8;
+            d6 = (d11 * d1 + d12 * d2) * 2.0D;
         }
 
-        this.s = d8 + d2 * d7;
-        this.u = d9 + d3 * d7;
-        this.b(this.s, this.t + (double) this.L, this.u);
-        d12 = this.v;
-        d13 = this.x;
+        this.s = d7 + d1 * d6;
+        this.u = d8 + d2 * d6;
+        this.b(this.s, this.t, this.u);
+        d11 = this.v;
+        d12 = this.x;
         if (this.l != null) {
+            d11 *= 0.75D;
             d12 *= 0.75D;
-            d13 *= 0.75D;
         }
 
-        if (d12 < -d0) {
-            d12 = -d0;
-        }
+        double d13 = this.m();
 
-        if (d12 > d0) {
-            d12 = d0;
-        }
-
-        if (d13 < -d0) {
-            d13 = -d0;
-        }
-
-        if (d13 > d0) {
-            d13 = d0;
-        }
-
-        this.d(d12, 0.0D, d13);
-        if (aint[0][1] != 0 && MathHelper.c(this.s) - i0 == aint[0][0] && MathHelper.c(this.u) - i2 == aint[0][2]) {
+        d11 = MathHelper.a(d11, -d13, d13);
+        d12 = MathHelper.a(d12, -d13, d13);
+        this.d(d11, 0.0D, d12);
+        if (aint[0][1] != 0 && MathHelper.c(this.s) - blockpos.n() == aint[0][0] && MathHelper.c(this.u) - blockpos.p() == aint[0][2]) {
             this.b(this.s, this.t + (double) aint[0][1], this.u);
-        } else if (aint[1][1] != 0 && MathHelper.c(this.s) - i0 == aint[1][0] && MathHelper.c(this.u) - i2 == aint[1][2]) {
+        } else if (aint[1][1] != 0 && MathHelper.c(this.s) - blockpos.n() == aint[1][0] && MathHelper.c(this.u) - blockpos.p() == aint[1][2]) {
             this.b(this.s, this.t + (double) aint[1][1], this.u);
         }
 
-        this.i();
-        Vec3 vec31 = this.a(this.s, this.t, this.u);
+        this.o();
+        Vec3 vec31 = this.k(this.s, this.t, this.u);
 
         if (vec31 != null && vec3 != null) {
             double d14 = (vec3.b - vec31.b) * 0.05D;
 
-            d6 = Math.sqrt(this.v * this.v + this.x * this.x);
-            if (d6 > 0.0D) {
-                this.v = this.v / d6 * (d6 + d14);
-                this.x = this.x / d6 * (d6 + d14);
+            d5 = Math.sqrt(this.v * this.v + this.x * this.x);
+            if (d5 > 0.0D) {
+                this.v = this.v / d5 * (d5 + d14);
+                this.x = this.x / d5 * (d5 + d14);
             }
 
             this.b(this.s, vec31.b, this.u);
         }
 
-        int i4 = MathHelper.c(this.s);
-        int i5 = MathHelper.c(this.u);
+        int i0 = MathHelper.c(this.s);
+        int i1 = MathHelper.c(this.u);
 
-        if (i4 != i0 || i5 != i2) {
-            d6 = Math.sqrt(this.v * this.v + this.x * this.x);
-            this.v = d6 * (double) (i4 - i0);
-            this.x = d6 * (double) (i5 - i2);
+        if (i0 != blockpos.n() || i1 != blockpos.p()) {
+            d5 = Math.sqrt(this.v * this.v + this.x * this.x);
+            this.v = d5 * (double) (i0 - blockpos.n());
+            this.x = d5 * (double) (i1 - blockpos.p());
         }
 
         if (flag0) {
@@ -562,23 +553,24 @@ public abstract class EntityMinecart extends Entity {
 
                 this.v += this.v / d15 * d16;
                 this.x += this.x / d15 * d16;
-            } else if (i3 == 1) {
-                if (this.o.a(i0 - 1, i1, i2).r()) {
+            } else if (blockrailbase_enumraildirection == BlockRailBase.EnumRailDirection.EAST_WEST) {
+                if (this.o.p(blockpos.e()).c().t()) {
                     this.v = 0.02D;
-                } else if (this.o.a(i0 + 1, i1, i2).r()) {
+                } else if (this.o.p(blockpos.f()).c().t()) {
                     this.v = -0.02D;
                 }
-            } else if (i3 == 0) {
-                if (this.o.a(i0, i1, i2 - 1).r()) {
+            } else if (blockrailbase_enumraildirection == BlockRailBase.EnumRailDirection.NORTH_SOUTH) {
+                if (this.o.p(blockpos.c()).c().t()) {
                     this.x = 0.02D;
-                } else if (this.o.a(i0, i1, i2 + 1).r()) {
+                } else if (this.o.p(blockpos.d()).c().t()) {
                     this.x = -0.02D;
                 }
             }
         }
+
     }
 
-    protected void i() {
+    protected void o() {
         if (this.l != null) {
             this.v *= 0.996999979019165D;
             this.w *= 0.0D;
@@ -588,38 +580,39 @@ public abstract class EntityMinecart extends Entity {
             this.w *= 0.0D;
             this.x *= 0.9599999785423279D;
         }
+
     }
 
-    public Vec3 a(double d0, double d1, double d2) {
+    public void b(double d0, double d1, double d2) {
+        this.s = d0;
+        this.t = d1;
+        this.u = d2;
+        float f0 = this.J / 2.0F;
+        float f1 = this.K;
+
+        this.a(new AxisAlignedBB(d0 - (double) f0, d1, d2 - (double) f0, d0 + (double) f0, d1 + (double) f1, d2 + (double) f0));
+    }
+
+    public Vec3 k(double d0, double d1, double d2) {
         int i0 = MathHelper.c(d0);
         int i1 = MathHelper.c(d1);
         int i2 = MathHelper.c(d2);
 
-        if (BlockRailBase.b_(this.o, i0, i1 - 1, i2)) {
+        if (BlockRailBase.d(this.o, new BlockPos(i0, i1 - 1, i2))) {
             --i1;
         }
 
-        Block block = this.o.a(i0, i1, i2);
+        IBlockState iblockstate = this.o.p(new BlockPos(i0, i1, i2));
 
-        if (BlockRailBase.a(block)) {
-            int i3 = this.o.e(i0, i1, i2);
-
-            d1 = (double) i1;
-            if (((BlockRailBase) block).e()) {
-                i3 &= 7;
-            }
-
-            if (i3 >= 2 && i3 <= 5) {
-                d1 = (double) (i1 + 1);
-            }
-
-            int[][] aint = c[i3];
+        if (BlockRailBase.d(iblockstate)) {
+            BlockRailBase.EnumRailDirection blockrailbase_enumraildirection = (BlockRailBase.EnumRailDirection) iblockstate.b(((BlockRailBase) iblockstate.c()).l());
+            int[][] aint = c[blockrailbase_enumraildirection.a()];
             double d3 = 0.0D;
             double d4 = (double) i0 + 0.5D + (double) aint[0][0] * 0.5D;
-            double d5 = (double) i1 + 0.5D + (double) aint[0][1] * 0.5D;
+            double d5 = (double) i1 + 0.0625D + (double) aint[0][1] * 0.5D;
             double d6 = (double) i2 + 0.5D + (double) aint[0][2] * 0.5D;
             double d7 = (double) i0 + 0.5D + (double) aint[1][0] * 0.5D;
-            double d8 = (double) i1 + 0.5D + (double) aint[1][1] * 0.5D;
+            double d8 = (double) i1 + 0.0625D + (double) aint[1][1] * 0.5D;
             double d9 = (double) i2 + 0.5D + (double) aint[1][2] * 0.5D;
             double d10 = d7 - d4;
             double d11 = (d8 - d5) * 2.0D;
@@ -649,7 +642,7 @@ public abstract class EntityMinecart extends Entity {
                 d1 += 0.5D;
             }
 
-            return Vec3.a(d0, d1, d2);
+            return new Vec3(d0, d1, d2);
         } else {
             return null;
         }
@@ -657,22 +650,43 @@ public abstract class EntityMinecart extends Entity {
 
     protected void a(NBTTagCompound nbttagcompound) {
         if (nbttagcompound.n("CustomDisplayTile")) {
-            this.k(nbttagcompound.f("DisplayTile"));
-            this.l(nbttagcompound.f("DisplayData"));
-            this.m(nbttagcompound.f("DisplayOffset"));
+            int i0 = nbttagcompound.f("DisplayData");
+            Block block;
+
+            if (nbttagcompound.b("DisplayTile", 8)) {
+                block = Block.b(nbttagcompound.j("DisplayTile"));
+                if (block == null) {
+                    this.a(Blocks.a.P());
+                } else {
+                    this.a(block.a(i0));
+                }
+            } else {
+                block = Block.c(nbttagcompound.f("DisplayTile"));
+                if (block == null) {
+                    this.a(Blocks.a.P());
+                } else {
+                    this.a(block.a(i0));
+                }
+            }
+
+            this.l(nbttagcompound.f("DisplayOffset"));
         }
 
         if (nbttagcompound.b("CustomName", 8) && nbttagcompound.j("CustomName").length() > 0) {
             this.b = nbttagcompound.j("CustomName");
         }
+
     }
 
     protected void b(NBTTagCompound nbttagcompound) {
-        if (this.t()) {
+        if (this.x()) {
             nbttagcompound.a("CustomDisplayTile", true);
-            nbttagcompound.a("DisplayTile", this.n().o() == Material.a ? 0 : Block.b(this.n()));
-            nbttagcompound.a("DisplayData", this.p());
-            nbttagcompound.a("DisplayOffset", this.r());
+            IBlockState iblockstate = this.t();
+            ResourceLocation resourcelocation = (ResourceLocation) Block.c.c(iblockstate.c());
+
+            nbttagcompound.a("DisplayTile", resourcelocation == null ? "" : resourcelocation.toString());
+            nbttagcompound.a("DisplayData", iblockstate.c().c(iblockstate));
+            nbttagcompound.a("DisplayOffset", this.v());
         }
 
         if (this.b != null && this.b.length() > 0) {
@@ -681,88 +695,92 @@ public abstract class EntityMinecart extends Entity {
     }
 
     public void g(Entity entity) {
-        if (!this.o.E) {
-            if (entity != this.l) {
-                // CanaryMod: VehicleCollision
-                VehicleCollisionHook vch = new VehicleCollisionHook((Vehicle) this.entity, entity.getCanaryEntity());
+        if (!this.o.D) {
+            if (!entity.T && !this.T) {
+                if (entity != this.l) {
+                    if (entity instanceof EntityLivingBase && !(entity instanceof EntityPlayer) && !(entity instanceof EntityIronGolem) && this.s() == EntityMinecart.EnumMinecartType.RIDEABLE && this.v * this.v + this.x * this.x > 0.01D && this.l == null && entity.m == null) {
 
-                Canary.hooks().callHook(vch);
-                if (vch.isCanceled()) {
-                    return;
-                }
-                //
-                if (entity instanceof EntityLivingBase && !(entity instanceof EntityPlayer) && !(entity instanceof EntityIronGolem) && this.m() == 0 && this.v * this.v + this.x * this.x > 0.01D && this.l == null && entity.m == null) {
-                    // CanaryMod: VehicleEnter (Animal/Mob)
-                    VehicleEnterHook veh = new VehicleEnterHook((Vehicle) this.entity, (EntityLiving) entity.getCanaryEntity());
+                        // CanaryMod: VehicleCollision
+                        VehicleCollisionHook vch = new VehicleCollisionHook((Vehicle) this.entity, entity.getCanaryEntity());
 
-                    Canary.hooks().callHook(veh);
-                    if (!veh.isCanceled()) {
-                        entity.a((Entity) this);
-                    }
-                    //
-                }
-
-                double d0 = entity.s - this.s;
-                double d1 = entity.u - this.u;
-                double d2 = d0 * d0 + d1 * d1;
-
-                if (d2 >= 9.999999747378752E-5D) {
-                    d2 = (double) MathHelper.a(d2);
-                    d0 /= d2;
-                    d1 /= d2;
-                    double d3 = 1.0D / d2;
-
-                    if (d3 > 1.0D) {
-                        d3 = 1.0D;
-                    }
-
-                    d0 *= d3;
-                    d1 *= d3;
-                    d0 *= 0.10000000149011612D;
-                    d1 *= 0.10000000149011612D;
-                    d0 *= (double) (1.0F - this.Y);
-                    d1 *= (double) (1.0F - this.Y);
-                    d0 *= 0.5D;
-                    d1 *= 0.5D;
-                    if (entity instanceof EntityMinecart) {
-                        double d4 = entity.s - this.s;
-                        double d5 = entity.u - this.u;
-                        Vec3 vec3 = Vec3.a(d4, 0.0D, d5).a();
-                        Vec3 vec31 = Vec3.a((double) MathHelper.b(this.y * 3.1415927F / 180.0F), 0.0D, (double) MathHelper.a(this.y * 3.1415927F / 180.0F)).a();
-                        double d6 = Math.abs(vec3.b(vec31));
-
-                        if (d6 < 0.800000011920929D) {
+                        Canary.hooks().callHook(vch);
+                        if (vch.isCanceled()) {
                             return;
                         }
+                        //
+                        if (entity instanceof EntityLivingBase && !(entity instanceof EntityPlayer) && !(entity instanceof EntityIronGolem) && this.m() == 0 && this.v * this.v + this.x * this.x > 0.01D && this.l == null && entity.m == null) {
+                            // CanaryMod: VehicleEnter (Animal/Mob)
+                            VehicleEnterHook veh = new VehicleEnterHook((Vehicle) this.entity, (EntityLiving) entity.getCanaryEntity());
 
-                        double d7 = entity.v + this.v;
-                        double d8 = entity.x + this.x;
-
-                        if (((EntityMinecart) entity).m() == 2 && this.m() != 2) {
-                            this.v *= 0.20000000298023224D;
-                            this.x *= 0.20000000298023224D;
-                            this.g(entity.v - d0, 0.0D, entity.x - d1);
-                            entity.v *= 0.949999988079071D;
-                            entity.x *= 0.949999988079071D;
-                        } else if (((EntityMinecart) entity).m() != 2 && this.m() == 2) {
-                            entity.v *= 0.20000000298023224D;
-                            entity.x *= 0.20000000298023224D;
-                            entity.g(this.v + d0, 0.0D, this.x + d1);
-                            this.v *= 0.949999988079071D;
-                            this.x *= 0.949999988079071D;
-                        } else {
-                            d7 /= 2.0D;
-                            d8 /= 2.0D;
-                            this.v *= 0.20000000298023224D;
-                            this.x *= 0.20000000298023224D;
-                            this.g(d7 - d0, 0.0D, d8 - d1);
-                            entity.v *= 0.20000000298023224D;
-                            entity.x *= 0.20000000298023224D;
-                            entity.g(d7 + d0, 0.0D, d8 + d1);
+                            Canary.hooks().callHook(veh);
+                            if (!veh.isCanceled()) {
+                                entity.a((Entity) this);
+                            }
+                            //
                         }
-                    } else {
-                        this.g(-d0, 0.0D, -d1);
-                        entity.g(d0 / 4.0D, 0.0D, d1 / 4.0D);
+
+                        double d0 = entity.s - this.s;
+                        double d1 = entity.u - this.u;
+                        double d2 = d0 * d0 + d1 * d1;
+
+                        if (d2 >= 9.999999747378752E-5D) {
+                            d2 = (double) MathHelper.a(d2);
+                            d0 /= d2;
+                            d1 /= d2;
+                            double d3 = 1.0D / d2;
+
+                            if (d3 > 1.0D) {
+                                d3 = 1.0D;
+                            }
+
+                            d0 *= d3;
+                            d1 *= d3;
+                            d0 *= 0.10000000149011612D;
+                            d1 *= 0.10000000149011612D;
+                            d0 *= (double) (1.0F - this.U);
+                            d1 *= (double) (1.0F - this.U);
+                            d0 *= 0.5D;
+                            d1 *= 0.5D;
+                            if (entity instanceof EntityMinecart) {
+                                double d4 = entity.s - this.s;
+                                double d5 = entity.u - this.u;
+                                Vec3 vec3 = (new Vec3(d4, 0.0D, d5)).a();
+                                Vec3 vec31 = (new Vec3((double) MathHelper.b(this.y * 3.1415927F / 180.0F), 0.0D, (double) MathHelper.a(this.y * 3.1415927F / 180.0F))).a();
+                                double d6 = Math.abs(vec3.b(vec31));
+
+                            if (d6 < 0.800000011920929D) {
+                                return;
+                            }
+
+                            double d7 = entity.v + this.v;
+                            double d8 = entity.x + this.x;
+
+                            if (((EntityMinecart) entity).m() == 2 && this.m() != 2) {
+                                this.v *= 0.20000000298023224D;
+                                this.x *= 0.20000000298023224D;
+                                this.g(entity.v - d0, 0.0D, entity.x - d1);
+                                entity.v *= 0.949999988079071D;
+                                entity.x *= 0.949999988079071D;
+                            } else if (((EntityMinecart) entity).m() != 2 && this.m() == 2) {
+                                entity.v *= 0.20000000298023224D;
+                                entity.x *= 0.20000000298023224D;
+                                entity.g(this.v + d0, 0.0D, this.x + d1);
+                                this.v *= 0.949999988079071D;
+                                this.x *= 0.949999988079071D;
+                            } else {
+                                d7 /= 2.0D;
+                                d8 /= 2.0D;
+                                this.v *= 0.20000000298023224D;
+                                this.x *= 0.20000000298023224D;
+                                this.g(d7 - d0, 0.0D, d8 - d1);
+                                entity.v *= 0.20000000298023224D;
+                                entity.x *= 0.20000000298023224D;
+                                entity.g(d7 + d0, 0.0D, d8 + d1);
+                            }
+                        } else {
+                            this.g(-d0, 0.0D, -d1);
+                            entity.g(d0 / 4.0D, 0.0D, d1 / 4.0D);
+                        }
                     }
                 }
             }
@@ -770,97 +788,208 @@ public abstract class EntityMinecart extends Entity {
     }
 
     public void a(float f0) {
-        this.af.b(19, Float.valueOf(f0));
+        this.ac.b(19, Float.valueOf(f0));
     }
 
-    public float j() {
-        return this.af.d(19);
-    }
-
-    public void c(int i0) {
-        this.af.b(17, Integer.valueOf(i0));
-    }
-
-    public int k() {
-        return this.af.c(17);
+    public float p() {
+        return this.ac.d(19);
     }
 
     public void j(int i0) {
-        this.af.b(18, Integer.valueOf(i0));
-    }
-
-    public int l() {
-        return this.af.c(18);
-    }
-
-    public abstract int m();
-
-    public Block n() {
-        if (!this.t()) {
-            return this.o();
-        } else {
-            int i0 = this.z().c(20) & '\uffff';
-
-            return Block.e(i0);
-        }
-    }
-
-    public Block o() {
-        return Blocks.a;
-    }
-
-    public int p() {
-        return !this.t() ? this.q() : this.z().c(20) >> 16;
+        this.ac.b(17, Integer.valueOf(i0));
     }
 
     public int q() {
-        return 0;
-    }
-
-    public int r() {
-        return !this.t() ? this.s() : this.z().c(21);
-    }
-
-    public int s() {
-        return 6;
+        return this.ac.c(17);
     }
 
     public void k(int i0) {
-        this.z().b(20, Integer.valueOf(i0 & '\uffff' | this.p() << 16));
+        this.ac.b(18, Integer.valueOf(i0));
+    }
+
+    public int r() {
+        return this.ac.c(18);
+    }
+
+    public abstract EntityMinecart.EnumMinecartType s();
+
+    public IBlockState t() {
+        return !this.x() ? this.u() : Block.d(this.H().c(20));
+    }
+
+    public IBlockState u() {
+        return Blocks.a.P();
+    }
+
+    public int v() {
+        return !this.x() ? this.w() : this.H().c(21);
+    }
+
+    public int w() {
+        return 6;
+    }
+
+    public void a(IBlockState iblockstate) {
+        this.H().b(20, Integer.valueOf(Block.f(iblockstate)));
         this.a(true);
     }
 
     public void l(int i0) {
-        this.z().b(20, Integer.valueOf(Block.b(this.n()) & '\uffff' | i0 << 16));
+        this.H().b(21, Integer.valueOf(i0));
         this.a(true);
     }
 
-    public void m(int i0) {
-        this.z().b(21, Integer.valueOf(i0));
-        this.a(true);
-    }
-
-    public boolean t() {
-        return this.z().a(22) == 1;
+    public boolean x() {
+        return this.H().a(22) == 1;
     }
 
     public void a(boolean flag0) {
-        this.z().b(22, Byte.valueOf((byte) (flag0 ? 1 : 0)));
+        this.H().b(22, Byte.valueOf((byte) (flag0 ? 1 : 0)));
     }
 
     public void a(String s0) {
         this.b = s0;
     }
 
-    public String b_() {
-        return this.b != null ? this.b : super.b_();
+    public String d_() {
+        return this.b != null ? this.b : super.d_();
     }
 
     public boolean k_() {
         return this.b != null;
     }
 
-    public String u() {
+    public String aL() {
         return this.b;
+    }
+
+    public IChatComponent e_() {
+        if (this.k_()) {
+            ChatComponentText chatcomponenttext = new ChatComponentText(this.b);
+
+            chatcomponenttext.b().a(this.aP());
+            chatcomponenttext.b().a(this.aJ().toString());
+            return chatcomponenttext;
+        } else {
+            ChatComponentTranslation chatcomponenttranslation = new ChatComponentTranslation(this.d_(), new Object[0]);
+
+            chatcomponenttranslation.b().a(this.aP());
+            chatcomponenttranslation.b().a(this.aJ().toString());
+            return chatcomponenttranslation;
+        }
+    }
+
+    public static enum EnumMinecartType {
+
+        RIDEABLE("RIDEABLE", 0, 0, "MinecartRideable"), CHEST("CHEST", 1, 1, "MinecartChest"), FURNACE("FURNACE", 2, 2, "MinecartFurnace"), TNT("TNT", 3, 3, "MinecartTNT"), SPAWNER("SPAWNER", 4, 4, "MinecartSpawner"), HOPPER("HOPPER", 5, 5, "MinecartHopper"), COMMAND_BLOCK("COMMAND_BLOCK", 6, 6, "MinecartCommandBlock");
+        private static final Map h = Maps.newHashMap();
+        private final int i;
+        private final String j;
+
+        private static final EntityMinecart.EnumMinecartType[] $VALUES = new EntityMinecart.EnumMinecartType[] { RIDEABLE, CHEST, FURNACE, TNT, SPAWNER, HOPPER, COMMAND_BLOCK};
+      
+        private EnumMinecartType(String p_i45847_1_, int p_i45847_2_, int p_i45847_3_, String p_i45847_4_) {
+            this.i = p_i45847_3_;
+            this.j = p_i45847_4_;
+        }
+
+        public int a() {
+            return this.i;
+        }
+
+        public String b() {
+            return this.j;
+        }
+
+        public static EntityMinecart.EnumMinecartType a(int p_a_0_) {
+            EntityMinecart.EnumMinecartType i0 = (EntityMinecart.EnumMinecartType) h.get(Integer.valueOf(p_a_0_));
+
+            return i0 == null ? RIDEABLE : i0;
+        }
+
+        static {
+            EntityMinecart.EnumMinecartType[] aentityminecart_enumminecarttype = values();
+            int i0 = aentityminecart_enumminecarttype.length;
+
+            for (int i1 = 0; i1 < i0; ++i1) {
+                EntityMinecart.EnumMinecartType entityminecart_enumminecarttype1 = aentityminecart_enumminecarttype[i1];
+
+                h.put(Integer.valueOf(entityminecart_enumminecarttype1.a()), entityminecart_enumminecarttype1);
+            }
+
+        }
+    }
+
+
+    static final class SwitchEnumMinecartType {
+
+        static final int[] a;
+
+        static final int[] b = new int[BlockRailBase.EnumRailDirection.values().length];
+      
+        static {
+            try {
+                b[BlockRailBase.EnumRailDirection.ASCENDING_EAST.ordinal()] = 1;
+            } catch (NoSuchFieldError nosuchfielderror90) {
+                ;
+            }
+
+            try {
+                b[BlockRailBase.EnumRailDirection.ASCENDING_WEST.ordinal()] = 2;
+            } catch (NoSuchFieldError nosuchfielderror1) {
+                ;
+            }
+
+            try {
+                b[BlockRailBase.EnumRailDirection.ASCENDING_NORTH.ordinal()] = 3;
+            } catch (NoSuchFieldError nosuchfielderror2) {
+                ;
+            }
+
+            try {
+                b[BlockRailBase.EnumRailDirection.ASCENDING_SOUTH.ordinal()] = 4;
+            } catch (NoSuchFieldError nosuchfielderror3) {
+                ;
+            }
+
+            a = new int[EntityMinecart.EnumMinecartType.values().length];
+
+            try {
+                a[EntityMinecart.EnumMinecartType.CHEST.ordinal()] = 1;
+            } catch (NoSuchFieldError nosuchfielderror4) {
+                ;
+            }
+
+            try {
+                a[EntityMinecart.EnumMinecartType.FURNACE.ordinal()] = 2;
+            } catch (NoSuchFieldError nosuchfielderror5) {
+                ;
+            }
+
+            try {
+                a[EntityMinecart.EnumMinecartType.TNT.ordinal()] = 3;
+            } catch (NoSuchFieldError nosuchfielderror6) {
+                ;
+            }
+
+            try {
+                a[EntityMinecart.EnumMinecartType.SPAWNER.ordinal()] = 4;
+            } catch (NoSuchFieldError nosuchfielderror7) {
+                ;
+            }
+
+            try {
+                a[EntityMinecart.EnumMinecartType.HOPPER.ordinal()] = 5;
+            } catch (NoSuchFieldError nosuchfielderror8) {
+                ;
+            }
+
+            try {
+                a[EntityMinecart.EnumMinecartType.COMMAND_BLOCK.ordinal()] = 6;
+            } catch (NoSuchFieldError nosuchfielderror9) {
+                ;
+            }
+
+        }
     }
 }
